# palindromes

./: README.md  pyproject.toml
src/palindromes/: __init__.py  claude.py  cli.py  core.py  djp.py  nikolai.py  sina.py  terry.py
tests/: test_core.py
