[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "palindromes"
version = "0.1.0"
description = "Play with some palindrome-finding functions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
